# LaunchPad

./: .env.example  .env.production  .gitignore  .prettierignore  .prettierrc  ACCESSIBILITY_IMPROVEMENTS.md  AGENTS.md  ARCHITECTURE.md  BOOK_COMPLETE.md  BOOK_IMPLEMENTATION_STATUS.md  BUILD_NOTES.md  CHECKLIST.md  CLAUDE.md  COMPREHENSIVE_TESTING_SUMMARY.md  COOLIFY_HOSTING_BILLING.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_STATUS.md  DESIGN_AUDIT_FINDINGS.md  DESIGN_AUDIT_PLAN.md  DESIGN_SYSTEM.md  ENV_TEMPLATE.md  FINAL_TEST_REPORT.md  HANDOFF_TO_HAIKU.md  HOSTINGER_COOLIFY_SETUP.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MANUAL_DEPLOYMENT_STEPS.md  NEW_FEATURES_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_CHECKLIST.md  QUICKSTART_DEPLOYMENT.md  QUICK_REFERENCE.md  QUICK_START_BOOK.md  README.md  README_DEPLOY.md  README_docker.md  SETUP.md  (+27 more)
agent-lightning-main(1)/agent-lightning-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  RAI_README.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.fast.json  pyrightconfig.json
agent-lightning-main(1)/agent-lightning-main/.github/workflows/: backport.yml  badge-apo.yml  badge-azure.yml  badge-calc-x.yml  badge-compat.yml  badge-examples.yml  badge-latest.yml  badge-spider.yml  badge-tinker.yml  badge-unit.yml  badge-unsloth.yml  benchmark.yml  dashboard.yml  docs.yml  examples-apo.yml  examples-azure.yml  examples-calc-x.yml  examples-compat.yml  examples-spider.yml  examples-tinker.yml  examples-unsloth.yml  issue-comment.yml  pypi-nightly.yml  pypi-release.yml  tests-full.yml  tests.yml
agent-lightning-main(1)/agent-lightning-main/agentlightning/: __init__.py  client.py  config.py  llm_proxy.py  logging.py  reward.py  server.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/adapter/: __init__.py  base.py  messages.py  triplet.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/algorithm/: __init__.py  base.py  decorator.py  fast.py  utils.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/cli/: __init__.py  store.py  vllm.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/emitter/: __init__.py  exception.py  message.py  object.py  reward.py  utils.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/execution/: __init__.py  base.py  client_server.py  events.py  inter_process.py  shared_memory.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/instrumentation/: __init__.py  agentops.py  agentops_langchain.py  litellm.py  vllm.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/litagent/: __init__.py  decorator.py  litagent.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/runner/: __init__.py  agent.py  base.py  legacy.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/store/: __init__.py  base.py  client_server.py  collection_based.py  memory.py  mongo.py  sqlite.py  threading.py  utils.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/tracer/: __init__.py  agentops.py  base.py  http.py  otel.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/trainer/: __init__.py  init_utils.py  legacy.py  registry.py  trainer.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/types/: __init__.py  core.py  resources.py  tracer.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/utils/: otlp.py  server_launcher.py  system_snapshot.py
agent-lightning-main(1)/agent-lightning-main/agentlightning/verl/: __init__.py  __main__.py  async_server.py  config.yaml  daemon.py  dataset.py  entrypoint.py  trainer.py
agent-lightning-main(1)/agent-lightning-main/dashboard/: .prettierrc.mjs  .stylelintignore  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.mjs  vitest.global-setup.mjs  vitest.setup.mjs  vitest.shims.d.ts
agent-lightning-main(1)/agent-lightning-main/dashboard/.storybook/: constants.ts  main.ts  modes.ts  preview.tsx  vitest.setup.ts
agent-lightning-main(1)/agent-lightning-main/dashboard/public/: index.html  main.tsx
agent-lightning-main(1)/agent-lightning-main/dashboard/src/: App.tsx  Router.tsx  cssVariableResolver.ts  main.tsx  theme.ts  types.ts  vite-env.d.ts
agent-lightning-main(1)/agent-lightning-main/dashboard/static/: mockServiceWorker.js
agent-lightning-main(1)/agent-lightning-main/dashboard/test-utils/: index.ts  python-server.py  render.tsx  server.ts
agent-lightning-main(1)/agent-lightning-main/docker/: Dockerfile.dev  compose.mongo.yml  compose.prometheus-memory-store.yml  compose.prometheus-mongo-store.yml  compose.store.yml  prometheus.memory-store.yml  prometheus.mongo-store.yml  setup.sh
agent-lightning-main(1)/agent-lightning-main/docs/: changelog.md  index.md
agent-lightning-main(1)/agent-lightning-main/docs/algorithm-zoo/: apo.md  index.md  (+1 more)
agent-lightning-main(1)/agent-lightning-main/examples/: .gitignore  README.md
agent-lightning-main(1)/agent-lightning-main/scripts/: badge_aggregation.js  base.Dockerfile  build_vm_image.sh  bump_version.sh  check_headers.py  cleanup.sh  export_openapi.py  litellm_ci.yaml  litellm_run.sh  litellm_sanity_check.py  mongodb_init_rs_host.js  mongodb_init_rs_profiling.js  restart_ray.sh  setup_latest.sh  setup_latest_gpu.sh  setup_stable.sh  setup_stable_gpu.sh  setup_type_checking.sh  validate_example_wandb.py  wandb_download_result.py
agent-lightning-main(1)/agent-lightning-main/tests/: test_client.py  test_config.py  test_logging.py
spec-kit-main/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md
spec-kit-main/.github/: CODEOWNERS
spec-kit-main/.github/workflows/: manual-release.yml  release.yml
spec-kit-main/scripts/: check-task-prerequisites.sh  common.sh  create-new-feature.sh  get-feature-paths.sh  setup-plan.sh  update-agent-context.sh
spec-kit-main/src/specify_cli/: __init__.py
spec-kit-main/templates/commands/: plan.md  specify.md  tasks.md
(+1844 files in other folders)
